updated example